[package]
name = "nsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
env_logger = "0.11.3"
log = "0.4.21"
pnet = "0.33.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
threadpool = "1.8"
nix = "0.24.1"
lazy_static = "1.4.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"