[package]
name = "nsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
env_logger = "0.11.3"
log = "0.4.21"
pnet = "0.33.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
threadpool = "1.8"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
hyper = "1.4.1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-native-certs = { version = "0.8", optional = true }
rustls-platform-verifier = { version = "0.3", optional = true }
hyper-rustls = "0.27.3"
rustls = { version = "0.23", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
url = "2.5.2"
rustls-pemfile = "2"
